--- a/packages/stencil-lib/src/components/inno-button/inno-button.scss
+++ b/packages/stencil-lib/src/components/inno-button/inno-button.scss
@@ -5,8 +5,8 @@
   display: block;
   width: max-content;
 
-  &.list-type{
-    width:100%
+  &.list-type {
+    width: 100%
   }
 
   &.disabled,
@@ -35,11 +35,11 @@
     font-family: 'InnomoticsHafferSQ-Bold';
     cursor: pointer;
     transition: all 0.3s cubic-bezier(0.84, 0, 0.58, 1);
-    
-    &.list-type{
+
+    &.list-type {
       justify-content: space-between;
-      gap:unset;
-      width:100%;
+      gap: unset;
+      width: 100%;
     }
 
     &.display-reverse {
@@ -53,12 +53,12 @@
 
         &:hover:not(.disabled):not(:disabled) {
           color: colors.$text-light-buttonlabel;
-          background-color: colors.$interaction-light-hover;
+          box-shadow: inset 0 -48px colors.$interaction-light-hover;
         }
 
         &:active:not(.disabled):not(:disabled) {
           color: colors.$text-light-buttonlabel;
-          background-color: colors.$interaction-light-pressed;
+          box-shadow: inset 0 -48px colors.$interaction-light-pressed;
         }
 
         &:disabled,
@@ -74,11 +74,11 @@
         background-color: colors.$primary-100;
 
         &:hover:not(.disabled):not(:disabled) {
-          background-color: colors.$secondary-300;
+          box-shadow: inset 0 -48px colors.$secondary-300;
         }
 
         &:active:not(.disabled):not(:disabled) {
-          background-color: colors.$additional-dark-300;
+          box-shadow: inset 0 -48px colors.$additional-dark-300;
         }
 
         &:disabled,
@@ -98,15 +98,15 @@
         color: colors.$interaction-light-default;
 
         &:hover:not(.disabled):not(:disabled) {
-          border-color: transparent;
+          border-color: colors.$interaction-light-hover;
           color: colors.$text-light-buttonlabel;
-          background-color: colors.$interaction-light-hover;
+          box-shadow: inset 0 -48px colors.$interaction-light-hover;
         }
 
         &:active:not(.disabled):not(:disabled) {
-          border-color: transparent;
+          border-color: colors.$additional-light-400;
           color: colors.$text-light-buttonlabel;
-          background-color: colors.$additional-light-400;
+          box-shadow: inset 0 -48px colors.$additional-light-400;
         }
       }
 
@@ -115,15 +115,15 @@
         border: 2px solid colors.$interaction-dark-default;
 
         &:hover:not(.disabled):not(:disabled) {
-          border-color: transparent;
+          border-color: colors.$interaction-dark-hover;
           color: colors.$text-dark-buttonlabel;
-          background-color: colors.$interaction-dark-hover;
+          box-shadow: inset 0 -48px colors.$interaction-dark-hover;
         }
 
         &:active:not(.disabled):not(:disabled) {
-          border-color: transparent;
+          border-color: colors.$interaction-dark-pressed;
           color: colors.$text-dark-buttonlabel;
-          background-color: colors.$interaction-dark-hover;
+          box-shadow: inset 0 -48px colors.$interaction-dark-pressed;
         }
       }
 
@@ -145,9 +145,9 @@
       }
 
       &.dark {
-        color:colors.$interaction-light-default;
+        color: colors.$interaction-light-default;
         box-shadow: 0px -5px colors.$interaction-light-default inset;
-        
+
         &:hover:not(.disabled):not(:disabled) {
           color: colors.$interaction-light-hover;
           box-shadow: 0 -8px colors.$interaction-light-hover inset;
@@ -163,17 +163,17 @@
       &.light {
         color: colors.$text-light-buttonlabel;
         border-color: colors.$primary-300;
-        box-shadow:inset 0 -5px colors.$primary-300;
+        box-shadow: inset 0 -5px colors.$primary-300;
 
         &:hover:not(.disabled):not(:disabled) {
           color: colors.$interaction-dark-hover;
-          box-shadow:inset 0 -8px colors.$interaction-dark-hover;
+          box-shadow: inset 0 -8px colors.$interaction-dark-hover;
         }
 
         &:active:not(.disabled):not(:disabled) {
           color: colors.$interaction-dark-pressed;
           border-color: colors.$interaction-dark-pressed;
-          box-shadow:inset 0 -8px colors.$interaction-dark-pressed;
+          box-shadow: inset 0 -8px colors.$interaction-dark-pressed;
         }
       }
 
@@ -181,7 +181,7 @@
       &.disabled {
         color: colors.$interaction-light-disabled;
         border-color: colors.$interaction-light-disabled;
-        box-shadow:inset 0 -5px colors.$interaction-light-disabled;
+        box-shadow: inset 0 -5px colors.$interaction-light-disabled;
         pointer-events: none;
       }
     }
@@ -198,7 +198,7 @@
       border-radius: 50%;
       padding: 0;
       background-color: colors.$background-light-200;
-      box-shadow: 0px 4px 20px 0px rgba(colors.$primary-200,0.33);
+      box-shadow: 0px 4px 20px 0px rgba(colors.$primary-200, 0.33);
       color: colors.$primary-200;
 
       &:hover:not(.disabled):not(:disabled) {
@@ -223,7 +223,7 @@
       max-width: 32px;
       padding: 0;
       background-color: colors.$background-light-200;
-      box-shadow: 0px 4px 20px 0px rgba(colors.$primary-200,0.33);
+      box-shadow: 0px 4px 20px 0px rgba(colors.$primary-200, 0.33);
 
       &:hover:not(.disabled):not(:disabled) {
         color: colors.$interaction-light-default;
