--- a/packages/stencil-lib/styles/_componentmixins.scss
+++ b/packages/stencil-lib/styles/_componentmixins.scss
@@ -6,3 +6,19 @@
     outline-width: 2px;
     outline-offset: 2px;
   }
+
+  .select-item {
+    display: grid;
+    grid-template-columns: minmax(0,1fr) 16px;
+    grid-template-rows: auto;
+    align-items:center;
+    border-width: 0px;
+    border-style: none;
+    padding: 0px 16px 0px 16px;
+    height: 56px;
+    gap:10px;
+    cursor:pointer;
+    &.icon-driven{
+      grid-template-columns: auto minmax(0,1fr) 16px;
+    }
+  }
