--- a/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
+++ b/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
@@ -4,8 +4,8 @@ $checkbox-size: 20px;
 $border-size: 1px;
 
 @mixin checkmark-base {
-  width: 6px;
-  height: 3px;
+  width: 4px;
+  height: 2px;
   display: block;
   position: absolute;
   border-top: none;
@@ -14,7 +14,7 @@ $border-size: 1px;
   border-bottom-style: solid;
   border-left-width: 0.0825rem;
   border-left-style: solid;
-  transform: translate(0.5px, -2px) rotate(-53deg) scale(2) skew(-8deg, -3deg);
+  transform: translate(0.5px, -1px) rotate(-53deg) scale(2) skew(-8deg, -3deg);
 }
 
 :host {
@@ -72,7 +72,19 @@ $border-size: 1px;
 
     &.dark {
       background-color: colors.$primary-200;
-      border: $border-size solid colors.$primary-300;
+      border: $border-size solid colors.$secondary-400;
+    }
+  }
+
+  &.error {
+    &.light {
+      background-color: colors.$primary-300;
+      border: $border-size solid colors.$error-200;
+    }
+
+    &.dark {
+      background-color: colors.$primary-200;
+      border: $border-size solid colors.$error-100;
     }
   }
 
@@ -87,18 +99,6 @@ $border-size: 1px;
     &.dark {
       background-color: colors.$primary-200;
       border: $border-size solid colors.$secondary-300;
-    }
-  }
-
-  &.error {
-    &.light {
-      background-color: colors.$primary-300;
-      border: $border-size solid colors.$error-200;
-    }
-
-    &.dark {
-      background-color: colors.$primary-200;
-      border: $border-size solid colors.$error-100;
     }
   }
 
@@ -139,6 +139,18 @@ $border-size: 1px;
       }
     }
 
+    &.error {
+      &.light {
+        background-color: colors.$primary-200;
+        border: $border-size solid colors.$primary-200;
+      }
+
+      &.dark {
+        background-color: colors.$primary-100;
+        border: $border-size solid colors.$primary-100;
+      }
+    }
+
     &:active {
       &.light {
         background-color: colors.$secondary-600;
@@ -162,18 +174,6 @@ $border-size: 1px;
       &.dark {
         background-color: colors.$primary-200;
         border: $border-size solid colors.$primary-200;
-      }
-    }
-
-    &.error {
-      &.light {
-        background-color: colors.$primary-200;
-        border: $border-size solid colors.$primary-200;
-      }
-
-      &.dark {
-        background-color: colors.$primary-100;
-        border: $border-size solid colors.$primary-100;
       }
     }
 
@@ -213,25 +213,25 @@ $border-size: 1px;
 
     &:hover {
       &.light {
-        border-bottom-color: colors.$secondary-400;
-        border-left-color: colors.$secondary-400;
+        border-bottom-color: colors.$primary-300;
+        border-left-color: colors.$primary-300;
       }
 
       &.dark {
-        border-bottom-color: colors.$primary-300;
-        border-left-color: colors.$primary-300;
+        border-bottom-color: colors.$primary-200;
+        border-left-color: colors.$primary-200;
       }
     }
 
     &:active {
       &.light {
-        border-bottom-color: colors.$secondary-400;
-        border-left-color: colors.$secondary-400;
+        border-bottom-color: colors.$primary-300;
+        border-left-color: colors.$primary-300;
       }
 
       &.dark {
-        border-bottom-color: colors.$primary-300;
-        border-left-color: colors.$primary-300;
+        border-bottom-color: colors.$primary-200;
+        border-left-color: colors.$primary-200;
       }
     }
 
@@ -314,7 +314,7 @@ $border-size: 1px;
     }
 
     &.dark {
-      color: colors.$primary-300;
+      color: colors.$secondary-400;
     }
   }
 
@@ -327,6 +327,18 @@ $border-size: 1px;
 
     &.dark {
       color: colors.$secondary-400;
+    }
+  }
+
+  &.checked {
+    &.error {
+      &.light {
+        color: colors.$primary-200;
+      }
+
+      &.dark {
+        color: colors.$primary-300;
+      }
     }
   }
 }
