--- a/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
+++ b/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
@@ -17,20 +17,7 @@
   }
 }
 
-.ix-footer-copyright {
-  margin-bottom: 32px;
-  font-family: 'InnomoticsHafferSQ-Bold';
-
-  &.light {
-    color: colors.$primary-200;
-  }
-
-  &.dark {
-    color: colors.$primary-300;
-  }
-}
-
-%ix-footer-content-base {
+inno-footer-item {
   margin-bottom: 32px;
   cursor: pointer;
 
@@ -53,10 +40,6 @@
       color: colors.$primary-300;
     }
   }
-}
-
-.ix-footer-text {
-  @extend %ix-footer-content-base;
 
   font-family: 'InnomoticsHafferSQ-Light';
   font-size: 14px;
@@ -64,8 +47,17 @@
   text-decoration: underline;
 }
 
-.ix-footer-icon {
-  @extend %ix-footer-content-base;
+.ix-footer-copyright {
+  margin-bottom: 32px;
+  font-family: 'InnomoticsHafferSQ-Bold';
+
+  &.light {
+    color: colors.$primary-200;
+  }
+
+  &.dark {
+    color: colors.$primary-300;
+  }
 }
 
 @media screen and (min-width: 800px) {
@@ -81,7 +73,7 @@
     margin-bottom: 0;
   }
 
-  %ix-footer-content-base {
+  inno-footer-item {
     margin-bottom: 0;
     margin-right: 32px;
 
