--- a/packages/stencil-lib/src/components/inno-footer-item/inno-footer-item.scss
+++ b/packages/stencil-lib/src/components/inno-footer-item/inno-footer-item.scss
@@ -1,50 +1,37 @@
 @use '@innomotics/ix/styles/colors';
 
-:host {
-  display: block;
-
-  margin-bottom: 32px;
-  cursor: pointer;
-
+@mixin labels {
   font-family: 'InnomoticsHafferSQ-Light';
   font-size: 14px;
   font-weight: 400;
   text-decoration: underline;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-
-  // &.light {
-  //   color: colors.$primary-200;
-
-  //   &:hover {
-  //     color: colors.$highlight-light-200;
-  //   }
-  // }
-
-  // &.dark {
-  //   color: colors.$primary-300;
-
-  //   &:focus {
-  //     color: colors.$primary-300;
-  //   }
-  // }
 }
 
-.inno-footer-item-style {
-  &.light {
+:host {
+  display: block;
+  cursor: pointer;
+
+  &.light :where(::slotted(a), ::slotted(p), ::slotted(inno-icon)) {
+    @include labels;
+
+    // Paragraph has an implicit relative start and block margin
+    margin-block-start: 0;
+    margin-block-end: 0;
     color: colors.$primary-200;
 
     &:hover {
-      color: colors.$highlight-light-200;
+      color: colors.$primary-200;
     }
   }
 
-  &.dark {
+  &.dark :where(::slotted(a), ::slotted(p), ::slotted(inno-icon)) {
+    @include labels;
+
+    margin-block-start: 0;
+    margin-block-end: 0;
     color: colors.$primary-300;
 
-    &:focus {
+    &:hover {
       color: colors.$primary-300;
     }
   }
@@ -57,37 +44,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
-    max-height: 60px;
 
-    a {
+    &.light :where(::slotted(a), ::slotted(p), ::slotted(inno-icon)) {
+      color: colors.$primary-200;
+
+      &:hover {
+        color: colors.$primary-200;
+      }
+    }
+
+    &.dark :where(::slotted(a), ::slotted(p), ::slotted(inno-icon)) {
       color: colors.$primary-100;
 
       &:hover {
         color: colors.$primary-100;
       }
     }
-
-    // &.light {
-    //   & > a,
-    //   & > p {
-    //     color: colors.$primary-200;
-
-    //     &:hover {
-    //       color: colors.$primary-200;
-    //     }
-    //   }
-    // }
-
-    // &.dark {
-    //   & > a,
-    //   & > p {
-    //     color: colors.$primary-100;
-
-    //     &:hover {
-    //       color: colors.$primary-100;
-    //     }
-    //   }
-    // }
   }
 }
