--- a/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
+++ b/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  row-gap: 32px;
 
   &.light {
     background-color: colors.$background-light-200;
@@ -18,7 +19,6 @@
 }
 
 .ix-footer-copyright {
-  margin-bottom: 32px;
   font-family: 'InnomoticsHafferSQ-Bold';
 
   &.light {
@@ -37,11 +37,10 @@
     justify-content: flex-end;
     align-items: center;
     flex-wrap: wrap;
-    align-content: center;
+    row-gap: 32px;
   }
 
   .ix-footer-copyright {
     margin-right: auto;
-    margin-bottom: 0;
   }
 }
