--- a/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
+++ b/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
@@ -57,4 +57,12 @@
   .ix-footer-copyright {
     margin-right: auto;
   }
+
+  .links {
+    display: contents;
+  }
+
+  .icons {
+    display: contents;
+  }
 }
