--- a/packages/test-applications/angular-test-app/src/app/app.component.html
+++ b/packages/test-applications/angular-test-app/src/app/app.component.html
@@ -20,25 +20,27 @@
   </div>
 
   <div>
-    <!-- <input type="radio" formControlName="radioGroup1" value="val1" /> -->
     <inno-radio
       name="radioGroup1"
       label="value1"
-      value="val1"
+      value="value1"
       formControlName="radioGroup1"
-    >
-    </inno-radio>
+    ></inno-radio>
+  </div>
+  <div>
     <inno-radio
       name="radioGroup1"
       label="value2"
-      value="val2"
+      value="value2"
       formControlName="radioGroup1"
     >
     </inno-radio>
+  </div>
+  <div>
     <inno-radio
       name="radioGroup1"
       label="value3"
-      value="val3"
+      value="value3"
       formControlName="radioGroup1"
     >
     </inno-radio>
