--- a/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
+++ b/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
@@ -10,19 +10,22 @@
 :host {
   display: flex;
   justify-content: flex-start;
-  height: 2.5rem;
   align-items: center;
   background-color: transparent;
   overflow: hidden;
 
-    inno-icon {
-      padding-top: 2px;
-    }
-  
+  inno-icon {
+    padding-top: 2px;
+  }
 
-  nav,
-  ol,
-  .crumb-items {
+  ol {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 16px;
+
+    ::slotted(inno-breadcrumb-item:last-of-type) {
+      font-family: "InnomoticsHafferSQ-Bold";
+    }
   }
 }
