Add indeterminate state to inno-checkbox, Build inno-checkbox on an input element

--- a/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
+++ b/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
@@ -511,4 +511,16 @@ $border-size: 1px;
       }
     }
   }
+
+  &.indeterminate {
+    &.readonly {
+      &.light {
+        color: colors.$primary-200;
+      }
+
+      &.dark {
+        color: colors.$primary-300;
+      }
+    }
+  }
 }
