--- a/packages/stencil-lib/styles/_base.scss
+++ b/packages/stencil-lib/styles/_base.scss
@@ -5,5 +5,7 @@
 }
 
 body {
-    font-family: 'InnomoticsHafferSQ-Light';
+    font-family: 'InnomoticsHafferSQ';
+    font-weight: normal;
+    font-style: normal;
 }
