--- a/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
+++ b/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
@@ -22,10 +22,11 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    row-gap: 16px;
+    gap: 4px;
 
     ::slotted(inno-breadcrumb-item:last-of-type) {
-      font-family: "InnomoticsHafferSQ-Bold";
+      font-family: 'InnomoticsHafferSQ';
+      font-weight: bold;
     }
   }
 }
