font family fixes

--- a/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
+++ b/packages/stencil-lib/src/components/inno-breadcrumb/inno-breadcrumb.scss
@@ -19,13 +19,14 @@
   }
 
   ol {
+    list-style:none;
     display: flex;
+    align-items:center;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 4px;
 
     ::slotted(inno-breadcrumb-item:last-of-type) {
-      font-family: 'InnomoticsHafferSQ';
       font-weight: bold;
     }
   }
