--- a/packages/stencil-lib/src/components/inno-button/inno-button.scss
+++ b/packages/stencil-lib/src/components/inno-button/inno-button.scss
@@ -32,7 +32,7 @@
     justify-content: center;
     gap: 8px;
     font-size: 16px;
-    font-family: 'InnomoticsHafferSQ-Bold';
+    font-weight: bold;
     cursor: pointer;
     transition: all 0.3s cubic-bezier(0.84, 0, 0.58, 1);
 
