--- a/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
+++ b/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
@@ -22,7 +22,8 @@ $border-size: 1px;
   display: inline-flex;
   justify-content: flex-start;
   align-items: center;
-  font-family: 'InnomoticsHafferSQ-Light';
+  font-weight: 300;
+  font-style: normal;
 
   // Remove focus default style
   outline-width: 0;
