--- a/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
+++ b/packages/stencil-lib/src/components/inno-footer/inno-footer.scss
@@ -32,7 +32,7 @@
 }
 
 .ix-footer-copyright {
-  font-family: 'InnomoticsHafferSQ-Bold';
+  font-weight: bold;
 
   &.light {
     color: colors.$primary-200;
