--- a/packages/test-applications/react-test-app/src/index.css
+++ b/packages/test-applications/react-test-app/src/index.css
@@ -1,9 +1,9 @@
 @import "@innomotics/ix/styles/innomotics.scss";
 
 :root {
-  font-family: 'InnomoticsHafferSQ-Light';
+  font-family: 'InnomoticsHafferSQ';
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 300;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
