--- a/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
+++ b/packages/stencil-lib/src/components/inno-checkbox/inno-checkbox.scss
@@ -170,8 +170,8 @@ $border-size: 1px;
       }
 
       &.dark {
-        background-color: colors.$secondary-300;
-        border: $border-size solid colors.$secondary-300;
+        background-color: colors.$secondary-400;
+        border: $border-size solid colors.$secondary-400;
       }
     }
 
@@ -246,8 +246,8 @@ $border-size: 1px;
       }
 
       &.dark {
-        background-color: colors.$secondary-300;
-        border: $border-size solid colors.$secondary-300;
+        background-color: colors.$secondary-400;
+        border: $border-size solid colors.$secondary-400;
       }
     }
 
@@ -472,7 +472,7 @@ $border-size: 1px;
     }
 
     &.dark {
-      color: colors.$secondary-400;
+      color: colors.$primary-300;
     }
   }
 
