font family fix

--- a/packages/stencil-lib/src/components/inno-popover/inno-popover.scss
+++ b/packages/stencil-lib/src/components/inno-popover/inno-popover.scss
@@ -7,7 +7,7 @@
   top: 0px;
   z-index: 50;
   color: colors.$primary-300;
-  font-family: 'InnomoticsHafferSQ-Light';
+  font-weight: 300;
   font-size: 14px;
   opacity: 0;
   visibility: collapse !important;
