--- a/packages/test-applications/angular-test-app/src/styles.less
+++ b/packages/test-applications/angular-test-app/src/styles.less
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root{
-    font-family: 'InnomoticsHafferSQ-Light';
+    font-family: 'InnomoticsHafferSQ';
 }
